Bug 345479 - kmessagewidget makes the chat window twice bigger
Summary: kmessagewidget makes the chat window twice bigger
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: text-ui (other bugs)
Version First Reported In: git-latest
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-03-24 15:07 UTC by Jan Grulich
Modified: 2015-03-24 17:43 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot of the problem (57.93 KB, image/png)
2015-03-24 15:21 UTC, Jan Grulich
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Grulich 2015-03-24 15:07:00 UTC
When I have opened a chat window and get disconnected (my google account gets unavailable sometimes) then a message box appears informing me that I got disconnected, but text in the message box doesn't fit into the size of my opened chat window and makes it automatically bigger. During the time when the message box is visible I'm not able to make the window smaller again and I need to wait until it disappears.

Reproducible: Always
Comment 1 Martin Klapetek 2015-03-24 15:11:46 UTC
What chat theme that is?

And can you post a screenshot with the message box? I'm not quire sure what are we talking about.
Comment 2 Jan Grulich 2015-03-24 15:21:22 UTC
Created attachment 91714 [details]
Screenshot of the problem

Ok, I've found a way how to reproduce it, go offline and try to send a message.
Comment 3 Martin Klapetek 2015-03-24 15:23:50 UTC
Aaah, ok. Yeah that does happen. Strange.

(for future reference, "message box" is a usually a popup dialog, that thing I'd call "kmessagewidget")
Comment 4 Martin Klapetek 2015-03-24 17:43:51 UTC
Git commit 9db6439d9031957f02aa68774d28b8a93fcd306d by Martin Klapetek.
Committed on 24/03/2015 at 17:43.
Pushed by mklapetek into branch 'Applications/15.04'.

[lib] Word-wrap the message widget shown when sending message and being offline

M  +1    -0    lib/chat-widget.cpp

http://commits.kde.org/telepathy-text-ui/9db6439d9031957f02aa68774d28b8a93fcd306d