[lib] Word-wrap the message widget shown when sending message and being offline

BUG: 345479